fix homepage spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -301,7 +301,7 @@ a {
     justify-content: flex-start;
     align-items: center;
 	padding: 1em 2em;
-	margin-top: 26vh;
+	margin-top: 28vh;
 	width: 100%;
 	height: 100%;
 }
